cmd/shared/dotnet/GoGit.Interop/NativeMethods.cs

// <auto-generated/>
#nullable enable
using System.Runtime.InteropServices;

namespace GoGit.Interop;

internal static partial class NativeMethods
{
    private const string LibName = "libgogit";

    // Memory management

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitFreeString(IntPtr s);

    public static string? ConsumeGoString(IntPtr ptr)
    {
        if (ptr == IntPtr.Zero)
            return null;

        var str = Marshal.PtrToStringUTF8(ptr);
        GitFreeString(ptr);
        return str;
    }

    public static void ThrowIfError(IntPtr errPtr)
    {
        if (errPtr == IntPtr.Zero)
            return;

        var msg = Marshal.PtrToStringUTF8(errPtr);
        GitFreeString(errPtr);
        throw new GoGitException(msg ?? "unknown error");
    }

    // Repository top-level functions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainInit(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        int isBare,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainOpen(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainOpenWithOptions(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        long optsHandle,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainClone(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        long optsHandle,
        out long handleOut);

    // Repository methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryHead(long repoHandle, out IntPtr refNameOut, out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryWorktree(long repoHandle, out long wtHandleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryFetch(long repoHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryPush(long repoHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryLog(long repoHandle, long optsHandle, out long iterOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryTags(long repoHandle, out long iterOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryBranches(long repoHandle, out long iterOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryNotes(long repoHandle, out long iterOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryReferences(long repoHandle, out long iterOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryReference(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        int resolved,
        out IntPtr refNameOut,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryResolveRevision(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string rev,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCreateRemote(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryRemote(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryDeleteRemote(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCreateBranch(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hash);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryDeleteBranch(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCreateTag(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hash,
        long optsHandle,
        out IntPtr refNameOut,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryTag(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out IntPtr refNameOut,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryDeleteTag(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryCommitObject(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hash,
        out IntPtr commitHashOut,
        out IntPtr msgOut,
        out IntPtr authorNameOut,
        out IntPtr authorEmailOut,
        out long tsOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryMerge(
        long repoHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string refName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hash,
        long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryRemotes(long repoHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitRepositoryFree(long repoHandle);

    // Worktree methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeStatus(long wtHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeAdd(
        long wtHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeAddWithOptions(long wtHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeAddGlob(
        long wtHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeCommit(
        long wtHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string msg,
        long optsHandle,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeCheckout(long wtHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreePull(long wtHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeReset(long wtHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeRestore(long wtHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeClean(long wtHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeMove(
        long wtHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fromPath,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string toPath,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeSubmodule(
        long wtHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeSubmodules(long wtHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitWorktreeFree(long wtHandle);

    // Remote methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteFetch(long remoteHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemotePush(long remoteHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteList(long remoteHandle, long optsHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRemoteConfigName(long remoteHandle, out IntPtr nameOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitRemoteFree(long remoteHandle);

    // Submodule methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleInit(long subHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdate(long subHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleRepository(long subHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleConfigName(long subHandle, out IntPtr nameOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSubmoduleFree(long subHandle);

    // Auth constructors

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewBasicHTTP(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string username,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewTokenHTTP(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string token,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewSSHKeyFromFile(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string user,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pemFile,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out long handleOut);
